IMPALA-13020: Use 64-bit integer for max message size on C++

Currently, the max message size is specified with a 32-bit signed
integer, so it maxes out at 2GB. Impala has use cases where a
message can exceed 2GB, so this modifies the C++ library to use
int64_t for the limit (and other associated variables). This allows
Impala to specify a higher limit for its internal communication.
This uses int64_t rather than 'long long' for clarity.